- fix bug which caused buttons to overlay each other on mobile

--- a/dll/static/src/scss/form.scss
+++ b/dll/static/src/scss/form.scss
@@ -21,6 +21,6 @@
 .form__field--error {
   border: 1px solid $color--punch;
 }
-.form__list-inputs {
-  max-width: calc(100% - 45px);
+.form__list-input {
+  max-width: calc(100% - 57px);
 }
